[package]
name = "river"
version = "0.1.0"
authors = ["Adil Zouitine <adilzouitinegm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "river"
path = "rust_src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
# Build against CPython's stable ABI (limited API) for 3.11+. Enabled only for
# the abi3 fallback wheel in CI (see .github/workflows/pypi.yml); the default
# per-version wheels are built without it for full-speed native code.
abi3 = ["pyo3/abi3-py311"]

[dependencies]
pyo3 = "0.29.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = "0.4"
ordered-float = { version = "3.9", features = ["serde"] }
libm = "0.2"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
