[package]
name = "river"
version = "0.1.0"
authors = ["Adil Zouitine <adilzouitinegm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "river"
path = "rust_src/lib.rs"
crate-type = ["cdylib", "rlib"]
bench = false

[features]
# Build against CPython's stable ABI (limited API) for 3.11+. Enabled only for
# the abi3 fallback wheel in CI (see .github/workflows/pypi.yml); the default
# per-version wheels are built without it for full-speed native code.
abi3 = ["pyo3/abi3-py311"]

# Treat warnings as hard errors so dead code, unused imports, etc. block the
# build instead of scrolling past in CI logs. Applies to local `uv sync` /
# `maturin develop` too, so issues surface before they reach CI.
[lints.rust]
warnings = "deny"

[dependencies]
pyo3 = "0.29.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = "0.4"
ordered-float = { version = "3.9", features = ["serde"] }
libm = "0.2"

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "5.0.1" }

[[bench]]
name = "stats_bench"
harness = false

[[bench]]
name = "adwin_bench"
harness = false

[[bench]]
name = "rolling_metrics_bench"
harness = false

[[bench]]
name = "sorted_window_bench"
harness = false

[[bench]]
name = "covariance_bench"
harness = false

[[bench]]
name = "expected_mutual_info_bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
