[project]
name = "river"
version = "0.23.0"
description = "Online machine learning in Python"
authors = [{ name = "Max Halford", email = "maxhalford25@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "scipy>=1.16,<2",
    "pandas>=2.2,<3",
    "numpy>=2.3.4,<3",
]

[project.urls]
Homepage = "https://riverml.xyz/"
Repository = "https://github.com/online-ml/river/"

[build-system]
requires = [
    "Cython",
    "numpy",
    "setuptools",
    "setuptools-rust",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "graphviz>=0.20.1,<0.21",
    "gymnasium>=0.29.0,<0.30",
    "matplotlib>=3.8.4,<4",
    "mypy>=1.11.1,<2",
    "pre-commit>=3.5.0,<4",
    "pytest>=7.4.2,<8",
    "ruff>=0.4.10,<0.5",
    "scikit-learn>=1.7.2,<2",
    "sqlalchemy>=2.0.22,<3",
    "sympy>=1.12.1,<2",
    "pytest-xdist[psutil]>=3.3.1,<4",
    "ipykernel>=6.26.0,<7",
    "ipython>=8.17.2,<9",
    "rich>=13.6.0,<14",
    "jupyter>=1.0.0,<2",
    "mike>=2.0.0,<3",
    "polars>=1.1.0,<2",
]
compat = [
    "scikit-learn>=1.5.1,<2",
    "sqlalchemy>=2.0.0,<3",
]
docs = [
    "dominate",
    "flask",
    "ipykernel",
    "jupyter-client",
    "mike",
    "mkdocs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-charts-plugin",
    "mkdocs-material",
    "nbconvert",
    "numpydoc",
    "python-slugify",
    "tabulate",
    "watermark",
    "notebook<7",
    "jupyter-contrib-nbextensions>=0.7.0,<0.8",
]
benchmark = [
    "dominate",
    "scikit-learn",
    "tabulate",
    "watermark",
]

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.23.0"
scipy = "^1.14.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
graphviz = "^0.20.1"
gymnasium = "^0.29.0"
matplotlib = "^3.8.4"
mypy = "^1.11.1"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
ruff = "^0.4.10"
scikit-learn = "^1.5.1"
sqlalchemy = "^2.0.22"
sympy = "^1.12.1"
pytest-xdist = { extras = ["psutil"], version = "^3.3.1" }
ipykernel = "^6.26.0"
ipython = "^8.17.2"
rich = "^13.6.0"
jupyter = "^1.0.0"
mike = "^2.0.0"
polars = "^1.1.0"

[tool.poetry.group.compat]
optional = true

[tool.poetry.group.compat.dependencies]
scikit-learn = "^1.5.1"
sqlalchemy = "^2.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
"dominate" = "*"
"flask" = "*"
"ipykernel" = "*"
"jupyter-client" = "*"
"jupyter-contrib-nbextensions" = "^0.7.0"
"mike" = "*"
"mkdocs" = "*"
"mkdocs-awesome-pages-plugin" = "*"
"mkdocs-charts-plugin" = "*"
"mkdocs-material" = "*"
"nbconvert" = "*"
"notebook" = "<7"
"numpydoc" = "*"
"plotly" = ">6.3.0"
"python-slugify" = "*"
"spacy" = "*"
"tabulate" = "*"
"watermark" = "*"

[tool.poetry.group.benchmark]
optional = true





[tool.setuptools]
packages = ["river"]

[tool.uv]
default-groups = [
    "dev",
    "compat",
    "docs",
    "benchmark",
]

[tool.hatch.build.targets.sdist]
include = [
    "**/*.cpp",
    "**/*.pyx",
    "**/*.pxd",
    "river/datasets/*.csv",
    "river/datasets/*.gz",
    "river/datasets/*.zip",
    "river/stream/*.zip",
    "Cargo.toml",
    "rust_src/**/*",
]

[tool.hatch.build.targets.wheel]
include = [
    "**/*.cpp",
    "**/*.pyx",
    "**/*.pxd",
    "river/datasets/*.csv",
    "river/datasets/*.gz",
    "river/datasets/*.zip",
    "river/stream/*.zip",
    "Cargo.toml",
    "rust_src/**/*",
]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--ignore=build.py",
    "--ignore=benchmarks",
    "--ignore=docs/scripts",
    "--verbose",
    "-ra",
    "-m not datasets and not slow",
    "--color=yes",
]
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER ELLIPSIS"
norecursedirs = [
    "build",
    "docs",
    "node_modules",
    ".eggs",
    "scikit-multiflow",
    "site",
    "benchmarks",
]
markers = [
    "datasets: tests that pertain to the datasets module",
    "slow: tests that take a long time to run",
]

[tool.ruff]
line-length = 100
target-version = 'py310'
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
files = "river"
strict = true

[[tool.mypy.overrides]]
module = [
    "mmh3.*",
    "numpy.*",
    "sklearn.*",
    "pytest.*",
    "pandas.*",
    "scipy.*",
    "graphviz.*",
    "vaex.*",
    "torch.*",
    "sqlalchemy.*",
    "requests.*",
    "gymnasium.*",
    "sympy.*",
    "polars.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Disable strict mode for all non fully-typed modules
module = [
    "river.metrics.*",
    "river.utils.*",
    "river.stats.*",
    "river.optim.*",
    "river.datasets.*",
    "river.tree.*",
    "river.preprocessing.*",
    "river.stream.*",
    "river.linear_model.*",
    "river.evaluate.*",
    "river.drift.*",
    "river.compose.*",
    "river.bandit.*",
    "river.cluster.*",
    "river.anomaly.*",
    "river.time_series.*",
    "river.feature_extraction.*",
    "river.ensemble.*",
    "river.proba.*",
    "river.multioutput.*",
    "river.naive_bayes.*",
    "river.checks.*",
    "river.rules.*",
    "river.model_selection.*",
    "river.forest.*",
    "river.neighbors.*",
    "river.sketch.*",
    "river.facto.*",
    "river.covariance.*",
    "river.compat.*",
    "river.multiclass.*",
    "river.reco.*",
    "river.imblearn.*",
    "river.feature_selection.*",
    "river.active.*",
    "river.neural_net.*",
    "river.test_estimators",
    "river.dummy",
]
# The strict option is global, the checks must be disabled one by one
warn_unused_ignores = false
check_untyped_defs = false
allow_subclassing_any = true
allow_any_generics = true
allow_untyped_calls = true
allow_incomplete_defs = true
allow_untyped_defs = true
implicit_reexport = true
warn_return_any = false
