[project]
name = "river"
version = "0.25.0"
description = "Online machine learning in Python"
authors = [{ name = "Max Halford", email = "maxhalford25@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "scipy>=1.14.1,<2",
    "numpy>=2.2.5,<3",
    "narwhals>=2.0.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.2,<3",
]

[project.urls]
Homepage = "https://riverml.xyz/"
Repository = "https://github.com/online-ml/river/"

[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "river._river_rust"
python-source = "."
features = ["pyo3/extension-module"]
include = [
    { path = "river/datasets/*.csv", format = ["sdist", "wheel"] },
    { path = "river/datasets/*.gz",  format = ["sdist", "wheel"] },
    { path = "river/datasets/*.zip", format = ["sdist", "wheel"] },
    { path = "river/drift/datasets/*.csv", format = ["sdist", "wheel"] },
    { path = "river/stream/*.zip", format = ["sdist", "wheel"] },
]

[dependency-groups]
dev = [
    "graphviz>=0.20.1",
    "gymnasium>=0.29.0",
    "altair>=5.0.0",
    "mypy>=1.11.1",
    "pandas>=2.2,<3",
    "prek>=0.2",
    "pytest>=9.0.3",
    "ruff>=0.15.8",
    "scikit-learn>=1.5.1",
    "sqlalchemy>=2.0.22",
    "sympy>=1.12.1",
    "pytest-xdist[psutil]>=3.3.1",
    "jupyter>=1.0.0",
    "mike @ git+https://github.com/squidfunk/mike.git",
    "polars>=1.1.0",
    "pyarrow>=11.0.0",
]
compat = [
    "scikit-learn>=1.5.1,<2",
    "sqlalchemy>=2.0.0,<3",
]
docs = [
    "dominate",
    "flask",
    "jupyter-client",
    "mike @ git+https://github.com/squidfunk/mike.git",
    "pygments",
    "altair>=5.0.0",
    "TA-Lib",
    "zensical>=0.0.40",
    "nbconvert",
    "numpydoc",
    "plotly>=6.3.0",
    "python-slugify",
    "matplotlib",
    "tabulate",
    "tqdm",
    "watermark",
    "notebook<7",
    "jupyter-contrib-nbextensions>=0.7.0,<0.8",
]
benchmark = [
    "asv",
    "virtualenv",
]



[tool.uv]
default-groups = [
    "dev",
    "compat",
    "docs",
    "benchmark",
]

[tool.cibuildwheel]
build-frontend = "build[uv]"
skip = ["*_i686", "*-win32", "*-musllinux_i686"]
test-command = "python -c \"import river\""

[tool.cibuildwheel.environment]
PATH = "$HOME/.cargo/bin:$PATH"
MACOSX_DEPLOYMENT_TARGET = "10.13"

[tool.cibuildwheel.linux.environment]
PATH = "$HOME/.cargo/bin:$PATH"

[[tool.cibuildwheel.overrides]]
select = "*-*linux_*"
before-build = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=none --profile=minimal -y && rustup show"

[[tool.cibuildwheel.overrides]]
select = ["*-macosx_*"]
before-build = "rustup show"

[[tool.cibuildwheel.overrides]]
select = ["*-win_*", "*-win32"]
before-build = "rustup show"

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--ignore=build.py",
    "--ignore=benchmarks",
    "--ignore=docs/scripts",
    "--verbose",
    "-ra",
    "-m not datasets and not slow",
    "--color=yes",
]
filterwarnings = [
    "ignore:A single label was found in 'y_true' and 'y_pred':UserWarning:sklearn",
]
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER ELLIPSIS"
norecursedirs = [
    "build",
    "docs",
    "node_modules",
    ".eggs",
    "scikit-multiflow",
    "site",
    "benchmarks",
]
markers = [
    "datasets: tests that pertain to the datasets module",
    "slow: tests that take a long time to run",
]

[tool.ruff]
line-length = 100
target-version = 'py310'
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pep8-naming: class names (N801), function/method names (N802), and the
    # cls/self convention on classmethods (N804). N803 (argument names) and
    # N806 (local variable names) are deliberately left out — `X: pd.DataFrame`
    # and `A_numpy = ...` are conventional in ML/scientific code and would
    # produce hundreds of false positives.
    "N801",
    "N802",
    "N804",
]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
files = "river"
strict = true

[[tool.mypy.overrides]]
# Both the bare top-level name and the `.*` submodule glob are listed: under the uv dev env
# (where prek now runs mypy) these libraries are installed without a py.typed marker, so a bare
# `import pandas` reports `import-untyped` unless the top-level name is ignored too.
module = [
    "mmh3",
    "mmh3.*",
    "numpy",
    "numpy.*",
    "sklearn",
    "sklearn.*",
    "pytest",
    "pytest.*",
    "pandas",
    "pandas.*",
    "scipy",
    "scipy.*",
    "graphviz",
    "graphviz.*",
    "vaex",
    "vaex.*",
    "torch",
    "torch.*",
    "sqlalchemy",
    "sqlalchemy.*",
    "requests",
    "requests.*",
    "gymnasium",
    "gymnasium.*",
    "sympy",
    "sympy.*",
    "polars",
    "polars.*",
    "pyarrow",
    "pyarrow.*",
    "river._river_rust",
    "river._river_rust.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# `numpydoc` (used by docs/parse for docstring scraping) hard-depends on Sphinx, whose source
# uses 3.12 `type` syntax that mypy rejects under `--python-version=3.11`. We build docs with
# mkdocs/zensical, never Sphinx, and never type-check it, so don't follow imports into it.
module = ["sphinx.*", "numpydoc.*"]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Disable strict mode for all non fully-typed modules
module = [
    "river.metrics.*",
    "river.stats.*",
    "river.optim.*",
    "river.datasets.*",
    "river.tree.*",
    "river.preprocessing.*",
    "river.stream.*",
    "river.linear_model.*",
    "river.evaluate.*",
    "river.drift.*",
    "river.compose.*",
    "river.bandit.*",
    "river.cluster.*",
    "river.anomaly.*",
    "river.time_series.*",
    "river.feature_extraction.*",
    "river.ensemble.*",
    "river.proba.*",
    "river.multioutput.*",
    "river.naive_bayes.*",
    "river.checks.*",
    "river.rules.*",
    "river.model_selection.*",
    "river.forest.*",
    "river.neighbors.*",
    "river.sketch.*",
    "river.facto.*",
    "river.covariance.*",
    "river.compat.*",
    "river.multiclass.*",
    "river.reco.*",
    "river.imblearn.*",
    "river.feature_selection.*",
    "river.active.*",
    "river.test_estimators",
]
# The strict option is global, the checks must be disabled one by one
warn_unused_ignores = false
check_untyped_defs = false
allow_subclassing_any = true
allow_any_generics = true
allow_untyped_calls = true
allow_incomplete_defs = true
allow_untyped_defs = true
warn_return_any = false
